trying a fixed width on ie

--- a/app/assets/stylesheets/style.css
+++ b/app/assets/stylesheets/style.css
@@ -220,7 +220,6 @@ li.last-in-row {
 	margin-right: 0px !important;
 }
 ul li.item img.photo {
-    width:100%;
 	display: block;
 	margin:0px;
 }
